Fixed Java8 compatibility problems